--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gruvbox",
+  "name": "gruvbox-fork",
   "version": "2.0.0",
-  "repository": "git@github.com:morhetz/gruvbox.git",
+  "repository": "git@github.com:wheredoesyourmindgo/gruvbox.git",
   "author": "Pavel Pertsev <morhetz@gmail.com>",
   "license": "MIT",
   "vim": {
